<resources>
    <string name="app_name">Conductores Transejecutivos</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="loginImage">Conductores Transejecutivos</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_login_button">Iniciar Sesión</string>
    <string name="prompt_login_button_short">Iniciar Sesión</string>
    <string name="error_empty_username">No has enviado tu nombre de usuario</string>
    <string name="error_empty_password">No has enviado tu contraseña</string>
    <string name="error_invalid_login">Usuario o contraseña incorrecta</string>
    <string name="error_general">Ha ocurrido un error, por favor contacta a soporte</string>
    <string name="server_error">Ocurrió un error, por favor contacta a soporte</string>
    <string name="no_services">No hay servicios para mostrar</string>
    <string name="accept_button">Aceptar</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_profile">Mi Perfil</string>
    <string name="title_activity_main">Conductores Transejecutivos</string>
    <string name="prompt_recoverpass_button">Recuperar Contraseña</string>
    <string name="recoverpass_success">Se ha enviado mail a tu correo eléctronico con instrucciones para recuperar tu contraseña</string>
    <string name="recoverpass_failured">No hay un usuario registrado con el nombre de usuario digitado</string>
    <string name="url_fly">https://www.google.com.co/webhp?sourceid=chromeinstant&amp;ion=1&amp;espv=2&amp;ie=UTF-8#q=</string>
    <string name="action_new_service">Nuevo Servicio</string>
    <string name="main_tab">Servicio</string>
    <string name="options_tab">Opciones</string>
    <string name="tracing_tab">Seguimiento</string>
    <string name="title_activity_profile">Mi Perfil</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="prompt_profile_button">Editar Perfil</string>
    <string name="prompt_email1">Correo Eléctronico</string>
    <string name="prompt_email2">Correo Eléctronico Alternativo</string>
    <string name="prompt_phone1">Télefono</string>
    <string name="prompt_phone2">Télefono Alternativo</string>
    <string name="error_empty_name">No has enviado tu nombre</string>
    <string name="error_empty_lastname">No has enviado tu apellido</string>
    <string name="error_empty_email1">No has enviado tu correo eléctronico</string>
    <string name="error_empty_phone1">No has enviado tu número de télefono</string>
    <string name="error_invalid_email">El correo eléctronico enviado es inválido</string>
    <string name="error_invalid_profile_update">Ha ocurrido un error, por favor intenta más tarde</string>
    <string name="snackbar_action_back">Regresar</string>
    <string name="profile_update_success">Se ha actualizado tu perfil exitosamente</string>
    <string name="title_activity_dashboard">Conductores Transejecutivos</string>
    <string name="not_driver">Servicio sin conductor asignado</string>
    <string name="action_dashboard">Inicio</string>
    <string name="title_activity_recoverpass">Recuperar Contraseña</string>
    <string name="title_activity_service">Orden de Servicio</string>
    <string name="service_info_title">Datos de la orden</string>
    <string name="passenger_info_title">Datos del pasajero</string>
    <string name="service_not_found_error">No se encontró el servicio</string>
    <string name="prompt_accept_service">Aceptar</string>
    <string name="prompt_decline_service">Rechazar</string>
    <string name="prompt_call_passenger">Llamar al pasajero</string>
    <string name="prompt_on_way">1 Hora previa servicio</string>
    <string name="prompt_on_source">Estoy en el sitio</string>
    <string name="prompt_start_service">Empezar ruta</string>
    <string name="prompt_finish_service">Terminar ruta</string>
    <string name="on_way_message">Se ha actualizado el estado "Estoy en camino"</string>
    <string name="on_source_message">Se ha actualizado el estado "Estoy en el sitio"</string>
    <string name="start_service_message">Se ha iniciado el servicio exitosamente</string>
    <string name="finish_service_message">Se ha finalizado el servicio exitosamente</string>
    <string name="prompt_tracing">Guardar</string>
    <string name="prompt_end_service">Finalizar Servicio</string>
    <string name="prompt_end_foreground_service">Finalizar</string>
    <string name="success_tracing_message">Se ha guardado el seguimiento exitosamente</string>
    <string name="error_tracing_message">Ha ocurrido un error, por favor de nuevo</string>
    <string name="device_not_supported">El dispositivo no cuenta con google play services, por favor verifica que este instalado</string>
    <string name="error_location">Ocurrió un error mientras se guardaba la ubicación actual, TransEjecutivos Driver</string>
    <string name="prompt_service_observations">Observaciones</string>
    <string name="title_activity_searchservice">Buscar Servicio</string>
    <string name="prompt_search_service_button">Buscar</string>
    <string name="title_activity_resetpass">Cambiar Contraseña</string>
    <string name="prompt_password2">Repita la nueva contraseña</string>
    <string name="prompt_password1">Nueva Contraseña</string>
    <string name="reset_password_description">Por ser un nuevo usuario, le invitamos a cambiar la contraseña con el siguiente formulario</string>
    <string name="error_empty_password1">La nueva contraseña no puede estar vacía</string>
    <string name="error_empty_password2">Debes repetir la contraseña</string>
    <string name="error_not_equals_passwords">Las contraseñas no coinciden</string>
    <string name="error_reset_password">No se pudo cambiar la contraseña, por favor intenta más tarde</string>
    <string name="success_reset_password">Se ha cambiado la contraseña exitosamente, por favor inicie sesión</string>
    <string name="prompt_reset_password_button">Cambiar Contraseña</string>
    <string name="service_decline_message">Ha rechazado el servicio exitosamente</string>
    <string name="service_accept_message">Ha aceptado el servicio exitosamente</string>
    <string name="service_message">Tiene una orden sin segumiento, por favor completar</string>
    <string name="button_service_modal_prompt">Ver Orden</string>
    <string name="prompt_set_start_time">Establecer hora de inicio</string>
    <string name="prompt_set_end_time">Establecer hora de fin</string>
    <string name="prompt_take_photo">Tomar Foto</string>
    <string name="service_send_sms_message">¿Desea notificar al pasajero por medio de un mensaje de texto?</string>
    <string name="button_not_send_sms_service_modal_prompt">No</string>
    <string name="button_send_sms_service_modal_prompt">Si</string>
    <string name="prompt_set_time_instructions">1. Una vez hayas establecido la hora de inicio, de fin o ambas, deberas tomar la foto y presionar el botón guardar.</string>
    <string name="prompt_service_instruction1">1. Escribe tus observaciones encima de la línea, puedes dejar el campo en blanco si no tienes ninguna.</string>
    <string name="prompt_service_instruction2">2. Debes tomar la foto del servicio para poder continuar. </string>
    <string name="prompt_service_image">Recuerda que tomar la foto es opcional</string>
    <string name="prompt_start_time_service">Hora de Inicio</string>
    <string name="prompt_end_time_service">Hora de Fin</string>
    <string name="prompt_start_time_service_value">Establecer</string>
    <string name="prompt_end_time_service_value">Establecer</string>
    <string name="prompt_app_version">1.3.2</string>
    <string name="prompt_service_refence">Servicio Indefinido</string>
    <string name="prompt_service_complete">Este servicio se encuentra completado, si deseas editarlo, presiona el botón rojo.</string>
    <string name="prompt_sms_passenger_service">Enviar SMS al pasajero</string>
    <string name="prompt_reset_service">Editar Seguimiento</string>
    <string name="prompt_date_unavailable">Fecha no disponible</string>
    <string name="extras_tabs">Extras</string>
    <string name="error_gps_disabled">Se ha desconectado el GPS, por favor revisar</string>
    <string name="error_gps_disconnect">Se ha desconectado el GPS... Reconectando</string>
    <string name="error_network_disconnect">Se ha perdido la conexión a internet... Reconectando</string>
    <string name="prompt_no_show_service">No show</string>
    <string name="photo_wasnt_take_it">La foto no fue capturada</string>
    <string name="prompt_no_show_confirm">Esta funcionalidad solo debe ser usada, cuando un pasajero no fue encontrado en el sitio de recogida ¿Esta seguro que desea continuar?</string>
    <string name="prompt_no_show_yes">Si</string>
    <string name="prompt_no_show_no">No</string>
    <string name="error_empty_observations">Debes ingresar una observación</string>
    <string name="prompt_call_to_support">LLAMAR A TRANSPORTES EJECUTIVOS</string>
    <string name="cancel_permission_location">Esta aplicación necesita permiso para realizar llamadas telefónicas, al no aceptar la solicitud, no podrá usar esta funcionalidad.</string>
    <string name="title_activity_splash">Transportes Ejecutivos</string>
    <string name="get_location_prompt">Enviando ubicación</string>
    <string name="stop_location_prompt">El proceso de envío de ubicación ha finalizado</string>
    <string name="passenger_phone_empty_message">El pasajero no tiene un número de teléfono registrado.</string>
    <string name="bh1a_time">Botón de 1 hora antes: </string>
    <string name="bls_time">llegó al sitio: </string>
    <string name="pab_time">Inicio: </string>
    <string name="st_time">Fin: </string>
    <string name="mah_android_upd_dlg_title">Información</string>
    <string name="mah_android_upd_dlg_btn_no_later_txt">Luego</string>
    <string name="mah_android_upd_dlg_btn_no_close_txt">Cerrar</string>
    <string name="mah_android_upd_dlg_btn_yes_update_txt">Actualizar</string>
    <string name="mah_android_upd_dlg_btn_yes_install_txt">Instalar</string>
    <string name="mah_android_upd_dlg_btn_yes_open_new_txt">Abrir la nueva versión</string>
    <string name="mah_android_upd_dlg_btn_no_uninstall_old_txt">Desinstalar la antigua versión</string>
    <string name="mah_android_upd_updater_info_install">La aplicación fue a movida a otro lugar. por favor instala la versión más reciente</string>
    <string name="mah_android_upd_updater_info_update">"Hay una nueva versión disponible. Por favor actualizala"</string>
    <string name="mah_android_upd_restricter_info_install">Esta es una versión antigua y está obsoleta. La aplicación fue a movida a otro lugar. \npor favor instala la versión más reciente</string>
    <string name="mah_android_upd_restricter_info_update">"Esta es una versión antigua y está obsoleta. por favor actualiza la aplicación"</string>
    <string name="mah_android_upd_restricter_info_open_new_version">"Esta es una versión antigua y está obsoleta. por favor utiliza la nueva aplicación"</string>
    <string name="mah_android_upd_internet_update_error">Revisa tu conexión a internet</string>
     <string name="mah_android_upd_play_service_not_found">Por favor instala Google Play Services para actualizar la aplicación</string>
    <string name="mah_android_upd_info_popup_text">MAHAndroidUpdater library</string>
    <string name="confirm_service_sms_message">Cordial saludo, ya voy en camino hacia "[ADDRESS]", para recogerlo. [DRIVER_NAME] - Transportes Ejecutivos.</string>
    <string name="on_source_service_sms_message">Sr(a) [PASSENGER_NAME], estoy en el sitio, mi placa es [LICENSE_PLATE], TEL: [DRIVER_PHONE1]. [DRIVER_NAME] - Transportes Ejecutivos.</string>
    <string name="sent_passenger_sms_message">Se ha enviado una notificación SMS al pasajero.</string>
</resources>