<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/car_view_padding"
    android:paddingLeft="@dimen/car_view_padding"
    android:paddingRight="@dimen/car_view_padding"
    android:paddingTop="@dimen/car_view_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:id="@+id/extra_service_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/extra_options_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_call_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:text="@string/prompt_call_passenger"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryTextLight" />

                <Button
                    android:id="@+id/btn_no_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="10dp"
                    android:text="@string/prompt_no_show_service"
                    android:background="@color/colorError"
                    android:textColor="@color/colorPrimaryTextLight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_show_form"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="17dp"
                    android:text="@string/prompt_service_instruction1"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="left"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="17dp"
                    android:text="@string/prompt_service_instruction2"
                    android:textColor="@color/colorError"
                    android:gravity="left"
                    android:layout_gravity="center_horizontal" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorText"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:id="@+id/txtview_observations"
                        android:layout_gravity="center_horizontal" />

                </android.support.design.widget.TextInputLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgview_photo" />

                <Button
                    android:id="@+id/button_take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"
                    android:text="@string/prompt_take_photo"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryTextLight" />

                <Button
                    android:id="@+id/button_finish_no_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="10dp"
                    android:text="@string/prompt_end_service"
                    android:visibility="gone"
                    android:background="@color/green"
                    android:textColor="@color/colorPrimaryTextLight" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>