<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.development.transejecutivosdrivers.LoginActivity">

    <ProgressBar
        android:id="@+id/tracing_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:paddingTop="300dp"
            android:fitsSystemWindows="true"
            android:id="@+id/tracing_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_start_time_service"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_start"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true" >

                <TimePicker
                    android:id="@+id/timepicker_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:timePickerMode="spinner"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_end_time_service"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_end"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true" >

                <TimePicker
                    android:id="@+id/timepicker_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:timePickerMode="spinner"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_service_observations"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/txtview_observations"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgview_photo" />

            </LinearLayout>

            <Button
                android:id="@+id/button_take_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                android:text="@string/prompt_take_photo"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryTextLight" />

            <Button
                android:id="@+id/button_finish_tracing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                android:text="@string/prompt_tracing"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryTextLight"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
